--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -30,12 +30,13 @@ header img {
 }
 
 .map-scroll-container {
+
   width: 100%;
   overflow-x: auto;
   overflow-y: hidden;
   white-space: nowrap;
   position: relative;
-  margin: 0 auto 16px auto;
+  margin: 16px auto 16px auto;
   scrollbar-width: none;
 }
 .map-scroll-container::-webkit-scrollbar {
