--- a/src/components/NavigationMenu.css
+++ b/src/components/NavigationMenu.css
@@ -7,7 +7,7 @@
     display: flex;
     align-items: center;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    z-index: 500;
+    /* z-index: 500; */
     flex-shrink: 0;
     -webkit-overflow-scrolling: touch;
 }
