modal items refactor

--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -272,7 +272,7 @@ area {
   
   button {
     padding: 8px 12px;
-    margin-right: 5px;
+    /* margin-right: 5px; */
     cursor: pointer;
     font-family: 'Lexend', sans-serif;
   }
@@ -342,7 +342,7 @@ table {
   
   button {
     padding: 8px 12px;
-    margin-right: 5px;
+    /* margin-right: 5px; */
     cursor: pointer;
   }
   
